# maestro

./: .gitignore  CLAUDE.md  README.md  STRUCTURE.md  add-dev-claude-md.sh  fix-maestro-install-outofthebox.sh  fix-maestro-installer.sh  maestro.config.yaml  pyproject.toml  setup-maestro.sh
.claude/: settings.local.json
.claude/commands/: MAESTRO-build-team.md
maestro/: cli.py  constants.py  domain.py  installer.py
maestro/core/agents/: intake.md  synthesizer.md  validator.md
maestro/core/protocols/: context-budget.md
maestro/core/tasks/: build-blueprint.md  elicit-domain.md  infer-executor.md  validate-artifact.md
maestro/core/templates/: agent-generated-tmpl.md  blueprint-tmpl.yaml  domain-model-tmpl.yaml  task-generated-tmpl.md
maestro/ralph/: executor.py
maestro/skills/: build_team.py  create_domain.py
tests/: test_cli.py
